dark mode fixed vitom

--- a/src/app/after-selection/after-selection.component.scss
+++ b/src/app/after-selection/after-selection.component.scss
@@ -91,7 +91,7 @@
     margin-bottom: 15px !important;
   }
   .upgrade {
-    margin-top: 0px;
+    margin-top: 15px;
   }
 }
 
